--- a/game.html
+++ b/game.html
@@ -12,6 +12,9 @@ title: Digital Narrative Project
 </head>
 <body>
 
+<h1><a href="/portfolio/TwineDemo.html"> My Twine Narrative </a> </h1>
+  <p>Click above to check out my Twine Demo!!</p>
+
 <h1><a href="/portfolio/bitsydemo.html"> My Bitsy Narrative </a> </h1>
 <p> Here, you can include the link to your game, or embed it directly in the HTML page (different options are easier depending on the tool you chose for your narrative). </p>
 
